--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <span class="span">
-          Restaurant St, Delicious City, London 9578, UK
+          Ahinsha square, above axia bank, dine-in
         </span>
       </address>
 
