--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="./js/script.js"></script>
+  <script src="./script.js"></script>
 
   <!-- 
     - ionicon link
