--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="This is a Restaurant html template made by codewithsadee">
 
   <!-- 
-    - favicon
+    - favicon  
   -->
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
@@ -555,16 +555,16 @@
 
                   <div class="title-wrapper">
                     <h3 class="title-3">
-                      <a href="#" class="card-title">Greek Salad</a>
+                      <a href="#" class="card-title">Assortment of Kebabs</a>
                     </h3>
 
                     <span class="badge label-1">Seasonal</span>
 
-                    <span class="span title-2">$25.50</span>
+                    <span class="span title-2">Rs.780</span>
                   </div>
 
                   <p class="card-text label-1">
-                    Tomatoes, green bell pepper, sliced cucumber onion, olives, and feta cheese.
+                   Indulge in  Delicious assortment of tantalizing and flavourful kebabs available in meat and veg options.
                   </p>
 
                 </div>
@@ -587,7 +587,7 @@
                       <a href="#" class="card-title">Lasagne</a>
                     </h3>
 
-                    <span class="span title-2">$40.00</span>
+                    <span class="span title-2">Rs,1500</span>
                   </div>
 
                   <p class="card-text label-1">
@@ -611,14 +611,15 @@
 
                   <div class="title-wrapper">
                     <h3 class="title-3">
-                      <a href="#" class="card-title">Butternut Pumpkin</a>
+                      <a href="#" class="card-title">Chestnut Frintters</a>
                     </h3>
 
-                    <span class="span title-2">$10.00</span>
+                    <span class="span title-2">Rs.600</span>
                   </div>
 
                   <p class="card-text label-1">
-                    Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.
+                    Exoctic Water chestnusts marinated and grilled in fusion of spices served with Marinara Sauce.
+
                   </p>
 
                 </div>
@@ -638,16 +639,16 @@
 
                   <div class="title-wrapper">
                     <h3 class="title-3">
-                      <a href="#" class="card-title">Tokusen Wagyu</a>
+                      <a href="#" class="card-title">Sizzlers</a>
                     </h3>
 
                     <span class="badge label-1">New</span>
 
-                    <span class="span title-2">$39.00</span>
+                    <span class="span title-2">Rs.1600</span>
                   </div>
 
                   <p class="card-text label-1">
-                    Vegetables, cheeses, ground meats, tomato sauce, seasonings and spices.
+                    hot, sizzling dishes featuring grilled meats, veggies, and seafood served on a cast-iron plate.
                   </p>
 
                 </div>
@@ -667,14 +668,14 @@
 
                   <div class="title-wrapper">
                     <h3 class="title-3">
-                      <a href="#" class="card-title">Olivas Rellenas</a>
+                      <a href="#" class="card-title"> Cosmopolitan</a>
                     </h3>
 
-                    <span class="span title-2">$25.00</span>
+                    <span class="span title-2">Rs.700</span>
                   </div>
 
                   <p class="card-text label-1">
-                    Avocados with crab meat, red onion, crab salad stuffed red bell pepper and green bell pepper.
+                  Vodka,Lime juice,triple sec,and cranberry juice.
                   </p>
 
                 </div>
@@ -694,14 +695,14 @@
 
                   <div class="title-wrapper">
                     <h3 class="title-3">
-                      <a href="#" class="card-title">Opu Fish</a>
+                      <a href="#" class="card-title">Daiquiri</a>
                     </h3>
 
-                    <span class="span title-2">$49.00</span>
+                    <span class="span title-2">Rs.750</span>
                   </div>
 
                   <p class="card-text label-1">
-                    Vegetables, cheeses, ground meats, tomato sauce, seasonings and spices
+                   Rum,lime juice,and simple syrup.
                   </p>
 
                 </div>
