--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
               <div class="menu-card hover:card">
 
                 <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
-                  <img src="./Images/menu-1.png" width="100" height="100" loading="lazy" alt="Greek Salad"
+                  <img src="./Images/kebabs.png" width="100" height="100" loading="lazy" alt="Greek Salad"
                     class="img-cover">
                 </figure>
 
@@ -603,7 +603,7 @@
               <div class="menu-card hover:card">
 
                 <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
-                  <img src="./Images/menu-3.png" width="100" height="100" loading="lazy" alt="Butternut Pumpkin"
+                  <img src="./Images/chestnut-fritters640x360.png" width="100" height="100" loading="lazy" alt="Butternut Pumpkin"
                     class="img-cover">
                 </figure>
 
@@ -631,7 +631,7 @@
               <div class="menu-card hover:card">
 
                 <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
-                  <img src="./Images/menu-4.png" width="100" height="100" loading="lazy" alt="Tokusen Wagyu"
+                  <img src="./Images/sizzlers.png" width="100" height="100" loading="lazy" alt="Tokusen Wagyu"
                     class="img-cover">
                 </figure>
 
@@ -660,7 +660,7 @@
               <div class="menu-card hover:card">
 
                 <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
-                  <img src="./Images/menu-5.png" width="100" height="100" loading="lazy" alt="Olivas Rellenas"
+                  <img src="./Images/cosmopolitan.png" width="100" height="100" loading="lazy" alt="Olivas Rellenas"
                     class="img-cover">
                 </figure>
 
@@ -687,7 +687,7 @@
               <div class="menu-card hover:card">
 
                 <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
-                  <img src="./Images/menu-6.png" width="100" height="100" loading="lazy" alt="Opu Fish"
+                  <img src="./Images/daiquiri.png" width="100" height="100" loading="lazy" alt="Opu Fish"
                     class="img-cover">
                 </figure>
 
