--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Grilli - Amazing & Delicious Food</title>
   <meta name="title" content="Grilli - Amazing & Delicious Food">
-  <meta name="description" content="This is a Restaurant html template made by codewithsadee">
+  <meta name="description" content="This is a Restaurant html template made by ECS SECTION A">
 
   <!-- 
     - favicon  
@@ -504,14 +504,16 @@
             <h2 class="headline-1 section-title">Lobster Tortellini</h2>
 
             <p class="section-text">
-              Lorem Ipsum is simply dummy text of the printingand typesetting industry lorem Ipsum has been the
-              industrys standard dummy text ever since the when an unknown printer took a galley of type.
+              Lobster tortellini is a luxurious Italian dish that pairs tender lobster meat with creamy tortellini pasta. 
+              The filling, made with finely chopped lobster, shallots, garlic, and herbs, is encased in pasta dough and shaped into small pockets.
+              Cooked until tender, the tortellini is served in a rich sauce like lobster bisque or tomato cream, garnished with herbs or Parmesan cheese.
+              It's a gourmet delight, perfect for indulgent appetizers or elegant pasta courses.           
             </p>
 
             <div class="wrapper">
-              <del class="del body-3">$40.00</del>
+              <del class="del body-3">RS 2000</del>
 
-              <span class="span body-1">$20.00</span>
+              <span class="span body-1">RS 1200</span>
             </div>
 
             <a href="#" class="btn btn-primary">
